syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.jsp";
option java_outer_classname = "HelloProto";

package org.jsp;

// The greeting service definition.
service Service1 {
    // Sends a greeting
    rpc SayHello (HelloRequest1) returns (HelloReply1) {}
}

// The request message containing the user's name.
message HelloRequest1 {
    string name = 1;
}

// The response message containing the greetings
message HelloReply1 {
    string message = 1;
}